--- a/index.html
+++ b/index.html
@@ -6,8 +6,34 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<title>Title</title>
 	<link rel="stylesheet" href="./css/utils.css">
+	<link rel="stylesheet" href="./index.css">
 </head>
-<body>
-	<button class="btn btn-danger centered">Execute order 66.</button>
+<body class="dark-body">
+<nav class="navbar navbar-dark navbar-expand-lg sticky" id="navbar">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="60"></a>
+
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Features</a>
+				</li>
+			</ul>
+
+			<button class="btn btn-primary" type="submit" id="purchase" ><p>Purchase</p></button>
+		</div>
+	</div>
+</nav>
 </body>
 </html>
