Added hero sections and small adjustment to navbar.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./css/utils.css">
 	<link rel="stylesheet" href="./index.css">
 </head>
-<body class="dark-body">
+<body class="">
 <nav class="navbar navbar-dark navbar-expand-lg sticky" id="navbar">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="60"></a>
@@ -35,5 +35,24 @@
 		</div>
 	</div>
 </nav>
+<br />
+<br />
+<div class="px-4 pt-5 my-5 text-center">
+	<h1 class="display-4 fw-bold">AmoorEDMS</h1>
+	<div class="col-lg-6 mx-auto">
+		<p class="lead mb-4">Streamline your document management with AmoorEDMS, the leading Electronic Document Management System (EDMS). Our powerful software solution empowers you to efficiently manage and organize your documents, ensuring that everything is in its right place and at your fingertips. Experience seamless integration, robust security, and superior search functionality. Join the thousands of businesses who have successfully implemented AmoorEDMS and take control of their document workflows.</p>
+		<br />
+		<br />
+	</div>
+	<div class="overflow-hidden">
+		<div class="container px-5">
+			<img src="./assets/icons/logo.svg" class="img-fluid mb-4" alt="Example image" height="1000" loading="lazy">
+		</div>
+	</div>
+</div>
+<hr>
+<br />
+<br />
+
 </body>
 </html>
