Added features section.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="px-4 pt-5 my-5 text-center">
 	<h1 class="display-4 fw-bold">AmoorEDMS</h1>
 	<div class="col-lg-6 mx-auto">
-		<p class="lead mb-4">Streamline your document management with AmoorEDMS, the leading Electronic Document Management System (EDMS). Our powerful software solution empowers you to efficiently manage and organize your documents, ensuring that everything is in its right place and at your fingertips. Experience seamless integration, robust security, and superior search functionality. Join the thousands of businesses who have successfully implemented AmoorEDMS and take control of their document workflows.</p>
+		<p class="lead mb-4">Streamline your document management with AmoorEDMS, the leading Electronic Document Management System (EDMS). Our powerful software solution empowers you to efficiently manage and organize your documents, ensuring that everything is in its right place and at your fingertips. Experience seamless integration, robust security, and superior search functionality.</p>
 		<br />
 		<br />
 	</div>
@@ -53,6 +53,37 @@
 <hr>
 <br />
 <br />
-
+<div class="container px-4 py-5" id="hanging-icons">
+	<h2 class="pb-2 border-bottom">Features</h2>
+	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+		<div class="col d-flex align-items-start">
+			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded mt-2">
+				<span class="bi bootstrap-icon features-icon">&#xF536;</span>
+			</div>
+			<div>
+				<h2>Security. It's here.</h2>
+				<p>AmoorEDMS secures your documents by requiring <b>special VPN clients</b> for employee access and offers a <b>local <span><a class="text-decoration-none" href="https://www.techtarget.com/searchdatabackup/definition/incremental-backup">incremental backup</a></span> system</b> to prevent data loss if the cloud version is compromised.</p>
+			</div>
+		</div>
+		<div class="col d-flex align-items-start">
+			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded mt-1">
+				<img src="./assets/icons/separation-of-concerns.svg" alt="" height="32">
+			</div>
+			<div>
+				<h2>Separation of Concerns</h2>
+				<p>AmoorEDMS provides great separation of concerns, users (aka employees) are separated into groups, and their permissions are inherited from their groups, so employees from one group do not have access to the work of another.</p>
+			</div>
+		</div>
+		<div class="col d-flex align-items-start">
+			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded">
+				<span class="bi bootstrap-icon features-icon"> &#xF46C;</span>
+			</div>
+			<div>
+				<h2>Lightning Fast Search</h2>
+				<p>AmoorEDMS offers lightning fast search functionality that is designed to be as user-friendly as possible, and also has a way to view documents in a tabular manner without the images for fast access.</p>
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
