Overhauled hero section

--- a/index.html
+++ b/index.html
@@ -31,28 +31,32 @@
 				</li>
 			</ul>
 
-			<button class="btn btn-primary" type="submit" id="purchase" ><p>Purchase</p></button>
+			<button class="btn btn-primary purchase" type="submit"><p>Purchase</p></button>
 		</div>
 	</div>
 </nav>
 <br />
 <br />
+
 <div class="px-4 pt-5 my-5 text-center">
 	<h1 class="display-4 fw-bold">AmoorEDMS</h1>
+	<br />
 	<div class="col-lg-6 mx-auto">
-		<p class="lead mb-4">Streamline your document management with AmoorEDMS, the leading Electronic Document Management System (EDMS). Our powerful software solution empowers you to efficiently manage and organize your documents, ensuring that everything is in its right place and at your fingertips. Experience seamless integration, robust security, and superior search functionality.</p>
-		<br />
-		<br />
+		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br />Manage less. Worry more.<br /></p>
+		<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+			<button class="btn btn-primary purchase" type="submit"><p>Purchase</p></button>
+		</div>
 	</div>
-	<div class="overflow-hidden">
+	<div class="overflow-hidden" style="">
 		<div class="container px-5">
-			<img src="./assets/icons/logo.svg" class="img-fluid mb-4" alt="Example image" height="1000" loading="lazy">
+			<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" height="500" loading="lazy">
 		</div>
 	</div>
 </div>
 <hr>
+
 <br />
-<br />
+<br /> <!-- Screenshot 2024-02-10 112210.png -->
 <div class="container px-4 py-5" id="hanging-icons">
 	<h2 class="pb-2 border-bottom">Features</h2>
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
@@ -75,7 +79,7 @@
 			</div>
 		</div>
 		<div class="col d-flex align-items-start">
-			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded">
+			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded mt-1">
 				<span class="bi bootstrap-icon features-icon"> &#xF46C;</span>
 			</div>
 			<div>
