--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
 	<h1 class="display-4 fw-bold">AmoorEDMS</h1>
 	<br />
 	<div class="col-lg-6 mx-auto">
-		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br />Manage less. Worry more.<br /></p>
-		<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-			<button class="btn btn-primary purchase" type="submit"><p>Purchase</p></button>
-		</div>
+		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br />Manage less. Store more.<br /></p>
+		<button class="btn btn-primary purchase mb-5" type="submit"><p>Purchase</p></button>
 	</div>
 	<div class="overflow-hidden" style="">
 		<div class="container px-5">
@@ -53,11 +51,11 @@
 		</div>
 	</div>
 </div>
-<hr>
+<hr> <!-- Why does this go above the navbar when the navbar passes over it?! -->
 
 <br />
 <br /> <!-- Screenshot 2024-02-10 112210.png -->
-<div class="container px-4 py-5" id="hanging-icons">
+<div class="container px-4 py-5 border-bottom" id="hanging-icons">
 	<h2 class="pb-2 border-bottom">Features</h2>
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
 		<div class="col d-flex align-items-start">
@@ -88,6 +86,102 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+<div class="container py-3">
+	<header>
+		<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb- ">
+			<a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
+				<span class="fs-4">Pricing example</span>
+			</a>
+
+			<nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+				<a class="me-3 py-2 text-dark text-decoration-none" href="#">Features</a>
+				<a class="me-3 py-2 text-dark text-decoration-none" href="#">Enterprise</a>
+				<a class="me-3 py-2 text-dark text-decoration-none" href="#">Support</a>
+				<a class="py-2 text-dark text-decoration-none" href="#">Pricing</a>
+			</nav>
+		</div>
+
+		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+			<h1 class="display-4 fw-normal">Pricing</h1>
+			<p class="fs-5 text-muted">(All purchases are one-time.)</p>
+		</div>
+	</header>
+
+	<main>
+		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card">
+					<div class="card-header py-3">
+						<h4 class="my-0 fw-normal">Basic</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">$1000<small class="text-muted fw-light">/business</small></h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li><p class="mt-4">Up to 900,000 documents.</p></li>
+							<li><p>Unlimited users.</p></li>
+							<li><p>VPN for restricting access to employees.</p></li>
+							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-outline-primary">Get Started</button>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card" >
+					<div class="card-header py-3">
+						<h4 class="my-0 fw-normal">Pro</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">$3000<small class="text-muted fw-light">/business</small></h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li><p class="mt-4">Up to 20,000,000 documents.</p></li>
+							<li><p>Unlimited users.</p></li>
+							<li><p>VPN for restricting access to employees.</p></li>
+							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-primary">Get Started</button>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
+					<div class="card-header py-3 text-white bg-primary border-primary">
+						<h4 class="my-0 fw-normal">Enterprise</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">$10,000<small class="text-muted fw-light">/business</small></h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li><p class="mt-4">Up to 40,000,000 documents.</p></li>
+							<li><p>Unlimited users.</p></li>
+							<li><p>VPN for restricting access to employees.</p></li>
+							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-primary">Get Started</button>
+					</div>
+				</div>
+			</div>
+			<div class="col horizontally-centered">
+				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
+					<div class="card-header py-3 text-white bg-primary border-primary">
+						<h4 class="my-0 fw-normal">Enterprise</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">Let's negotiate.</small></h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li><p class="mt-4">Amount of documents is whatever you like.</p></li>
+							<li><p>Unlimited users.</p></li>
+							<li><p>VPN for restricting access to employees.</p></li>
+							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-primary">Contact Us</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 </div>
 </body>
 </html>
