--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</li>
 			</ul>
 
-			<button class="btn btn-primary purchase" type="submit"><p>Purchase</p></button>
+			<a href="#pricing" class="btn btn-primary purchase" type="submit"><p>Get Started</p></a>
 		</div>
 	</div>
 </nav>
@@ -42,10 +42,8 @@
 	<h1 class="display-4 fw-bold">AmoorEDMS</h1>
 	<br />
 	<div class="col-lg-6 mx-auto">
-		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br />Manage less. Worry more.<br /></p>
-		<div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-			<button class="btn btn-primary purchase" type="submit"><p>Purchase</p></button>
-		</div>
+		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br />Manage less. Store more.<br /></p>
+		<a href="#pricing" class="btn btn-primary purchase mb-5" type="submit"><p>Get Started</p></a>
 	</div>
 	<div class="overflow-hidden" style="">
 		<div class="container px-5">
@@ -53,11 +51,11 @@
 		</div>
 	</div>
 </div>
-<hr>
+<hr> <!-- Why does this go above the navbar when the navbar passes over it?! -->
 
 <br />
 <br /> <!-- Screenshot 2024-02-10 112210.png -->
-<div class="container px-4 py-5" id="hanging-icons">
+<div class="container px-4 py-5 border-bottom" id="hanging-icons">
 	<h2 class="pb-2 border-bottom">Features</h2>
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
 		<div class="col d-flex align-items-start">
@@ -88,6 +86,85 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+<div class="container py-3">
+	<main id="pricing">
+		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+			<h1 class="display-4 fw-normal">Pricing</h1>
+			<p class="fs-5 text-muted">(All purchases are one-time.)</p>
+		</div>
+		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card">
+					<div class="card-header py-3">
+						<h4 class="my-0 fw-normal">Basic</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">$1000<small class="text-muted fw-light">/business</small></h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li><p class="mt-4">Up to 900,000 documents.</p></li>
+							<li><p>Unlimited users.</p></li>
+							<li><p>VPN for restricting access to employees.</p></li>
+							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-outline-primary">Get Started</button>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card" >
+					<div class="card-header py-3">
+						<h4 class="my-0 fw-normal">Pro</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">$3000<small class="text-muted fw-light">/business</small></h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li><p class="mt-4">Up to 20,000,000 documents.</p></li>
+							<li><p>Unlimited users.</p></li>
+							<li><p>VPN for restricting access to employees.</p></li>
+							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-primary">Get Started</button>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
+					<div class="card-header py-3 text-white bg-primary border-primary">
+						<h4 class="my-0 fw-normal">Enterprise</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">$10,000<small class="text-muted fw-light">/business</small></h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li><p class="mt-4">Up to 40,000,000 documents.</p></li>
+							<li><p>Unlimited users.</p></li>
+							<li><p>VPN for restricting access to employees.</p></li>
+							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-primary">Get Started</button>
+					</div>
+				</div>
+			</div>
+			<div class="col horizontally-centered">
+				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
+					<div class="card-header py-3 text-white bg-primary border-primary">
+						<h4 class="my-0 fw-normal">Enterprise</h4>
+					</div>
+					<div class="card-body">
+						<h1 class="card-title pricing-card-title">Let's negotiate.</small></h1>
+						<ul class="list-unstyled mt-3 mb-4">
+							<li><p class="mt-4">Amount of documents is whatever you like.</p></li>
+							<li><p>Unlimited users.</p></li>
+							<li><p>VPN for restricting access to employees.</p></li>
+							<li><p class="mb-4">Unlimited VPN clients.</p></li>
+						</ul>
+						<button type="button" class="w-100 btn btn-lg btn-primary">Contact Us</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 </div>
 </body>
 </html>
