--- a/index.html
+++ b/index.html
@@ -9,25 +9,22 @@
 	<link rel="stylesheet" href="./index.css">
 </head>
 <body class="">
-<nav class="navbar navbar-dark navbar-expand-lg sticky" id="navbar">
+<nav class="navbar navbar-dark navbar-expand-lg sticky">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="60"></a>
 
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<div class="collapse navbar-collapse navbar-supported-content" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">About</a>
+					<a class="nav-link active" aria-current="page" href="./html/contact-us.html">Contact Us</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Contact Us</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Features</a>
+					<a href="#features" class="nav-link active" aria-current="page" href="#">Features</a>
 				</li>
 			</ul>
 
@@ -55,7 +52,7 @@
 
 <br />
 <br /> <!-- Screenshot 2024-02-10 112210.png -->
-<div class="container px-4 py-5 border-bottom" id="hanging-icons">
+<div class="container px-4 py-5 border-bottom" id="features">
 	<h2 class="pb-2 border-bottom">Features</h2>
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
 		<div class="col d-flex align-items-start">
