Changed the Pricing section to "Price. Buy", and added a bunch of gradients to spice things up. Also fixed bug where the home button on the empty contact us page does not work.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <br />
 
 <div class="px-4 pt-5 my-5 text-center">
-	<h1 class="display-4 fw-bold">AmoorEDMS</h1>
+	<h1 class="display-4 fw-bold blue-to-cyan-text">AmoorEDMS</h1>
 	<br />
 	<div class="col-lg-6 mx-auto">
 		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br />Manage less. Store more.<br /></p>
@@ -60,7 +60,7 @@
 				<span class="bi bootstrap-icon features-icon">&#xF536;</span>
 			</div>
 			<div>
-				<h2>Security. It's here.</h2>
+				<h2 class="sky-to-blue-text">Security. It's here.</h2>
 				<p>AmoorEDMS secures your documents by requiring <b>special VPN clients</b> for employee access and offers a <b>local <span><a class="text-decoration-none" href="https://www.techtarget.com/searchdatabackup/definition/incremental-backup">incremental backup</a></span> system</b> to prevent data loss if the cloud version is compromised.</p>
 			</div>
 		</div>
@@ -69,7 +69,7 @@
 				<img src="./assets/icons/separation-of-concerns.svg" alt="" height="32">
 			</div>
 			<div>
-				<h2>Separation of Concerns</h2>
+				<h2 class="blue-to-cyan-text">Separation of Concerns</h2>
 				<p>AmoorEDMS provides great separation of concerns, users (aka employees) are separated into groups, and their permissions are inherited from their groups, so employees from one group do not have access to the work of another.</p>
 			</div>
 		</div>
@@ -78,7 +78,7 @@
 				<span class="bi bootstrap-icon features-icon"> &#xF46C;</span>
 			</div>
 			<div>
-				<h2>Lightning Fast Search</h2>
+				<h2 class="sky-to-blue-text">Lightning Fast Search</h2>
 				<p>AmoorEDMS offers lightning fast search functionality that is designed to be as user-friendly as possible, and also has a way to view documents in a tabular manner without the images for fast access.</p>
 			</div>
 		</div>
@@ -88,7 +88,7 @@
 <div class="container py-3">
 	<main id="pricing">
 		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-			<h1 class="display-4 fw-normal">Pricing</h1>
+			<h1 class="display-4 fw-normal blue-to-cyan-text">Price. Buy.</h1>
 			<p class="fs-5 text-muted">(All purchases are one-time.)</p>
 		</div>
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
