Added gradient to "Manage less. Store more.".

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<h1 class="display-4 fw-bold blue-to-cyan-text">AmoorEDMS</h1>
 	<br />
 	<div class="col-lg-6 mx-auto">
-		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br />Manage less. Store more.<br /></p>
+		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br /><span class="blue-to-cyan-text">Manage less. Store more.</span><br /></p>
 		<a href="#pricing" class="btn btn-primary purchase mb-5" type="submit"><p>Get Started</p></a>
 	</div>
 	<div class="overflow-hidden" style="">
@@ -53,14 +53,14 @@
 <br />
 <br /> <!-- Screenshot 2024-02-10 112210.png -->
 <div class="container px-4 py-5 border-bottom" id="features">
-	<h2 class="pb-2 border-bottom">Features</h2>
+	<h2 class="pb-2 border-bottom sky-to-blue-text">Features</h2>
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
 		<div class="col d-flex align-items-start">
 			<div class="icon-square bg-light text-dark flex-shrink-0 me-3 rounded mt-2">
 				<span class="bi bootstrap-icon features-icon">&#xF536;</span>
 			</div>
 			<div>
-				<h2 class="sky-to-blue-text">Security. It's here.</h2>
+				<h2 class="blue-to-cyan-text">Security. It's here.</h2>
 				<p>AmoorEDMS secures your documents by requiring <b>special VPN clients</b> for employee access and offers a <b>local <span><a class="text-decoration-none" href="https://www.techtarget.com/searchdatabackup/definition/incremental-backup">incremental backup</a></span> system</b> to prevent data loss if the cloud version is compromised.</p>
 			</div>
 		</div>
