Added footer, decreased size of navbar.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="./index.css">
 </head>
 <body class="">
-<nav class="navbar navbar-dark navbar-expand-lg sticky">
+<nav class="navbar navbar-dark navbar-expand-lg sticky-top frosted-glass full-width">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="60"></a>
+		<a class="navbar-brand" href="#"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="30"></a>
 
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
@@ -42,7 +42,7 @@
 		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br /><span class="blue-to-cyan-text">Manage less. Store more.</span><br /></p>
 		<a href="#pricing" class="btn btn-primary purchase mb-5" type="submit"><p>Get Started</p></a>
 	</div>
-	<div class="overflow-hidden" style="">
+	<div class="overflow-hidden">
 		<div class="container px-5">
 			<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" height="500" loading="lazy">
 		</div>
@@ -51,7 +51,7 @@
 <hr>
 
 <br />
-<br /> <!-- Screenshot 2024-02-10 112210.png -->
+<br />
 <div class="container px-4 py-5 border-bottom" id="features">
 	<h2 class="pb-2 border-bottom sky-to-blue-text">Features</h2>
 	<div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
@@ -163,5 +163,22 @@
 		</div>
 	</main>
 </div>
+
+<div class="mt-auto py-2 frosted-glass sticky-bottom full-width footer">
+	<div class="container">
+		<div class="row horizontally-centered">
+			<div class="footer-content">
+				<a href="./index.html" class="vertically-centered"><img src="./assets/icons/logo.svg" alt="AmoorEDMS" height="30" class="vertically-centered" /></a>
+				<p class="text-muted vertically-centered footer-text">© 2021 AmoorEDMS, Inc</p>
+				<div class="socials">
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://www.facebook.com/RickAstley/">&#xF344;</a>
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="#">&#xF618;</a>
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://bit.ly/3UN1TmN">&#xF62B;</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 </body>
 </html>
