--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="../css/contact-us.css">
 </head>
 <body>
-<nav class="navbar navbar-dark navbar-expand-lg sticky">
+<nav class="navbar navbar-dark navbar-expand-lg sticky-top frosted-glass full-width">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="../assets/icons/logo.svg" alt="AmoorEDMS" height="60"></a>
+		<a class="navbar-brand" href="#"><img src="../assets/icons/logo.svg" alt="AmoorEDMS" height="30"></a>
 
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
@@ -32,5 +32,21 @@
 		</div>
 	</div>
 </nav>
+
+<div class="mt-auto py-2 frosted-glass sticky-bottom full-width footer">
+	<div class="container">
+		<div class="row horizontally-centered">
+			<div class="footer-content">
+				<a href="./index.html" class="vertically-centered"><img src="../assets/icons/logo.svg" alt="AmoorEDMS" height="30" class="vertically-centered" /></a>
+				<p class="text-muted vertically-centered footer-text">© 2021 AmoorEDMS, Inc</p>
+				<div class="socials">
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://www.facebook.com/RickAstley/">&#xF344;</a>
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="#">&#xF618;</a>
+					<a class="text-muted bi bootstrap-icon fs-3 social-media-icon" href="https://bit.ly/3UN1TmN">&#xF62B;</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
