Made the footer non-sticky.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 	</main>
 </div>
 
-<div class="mt-auto py-2 frosted-glass sticky-bottom full-width footer">
+<div class="mt-auto py-2 frosted-glass full-width footer">
 	<div class="container">
 		<div class="row horizontally-centered">
 			<div class="footer-content">
