--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -35,7 +35,7 @@
 	</div>
 </nav>
 
-<div class="mt-auto py-2 frosted-glass sticky-bottom full-width footer">
+<div class="py-2 frosted-glass full-width footer">
 	<div class="container">
 		<div class="row horizontally-centered">
 			<div class="footer-content">
