--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<a class="nav-link active" aria-current="page" href="./html/contact-us.html">Contact Us</a>
 				</li>
 				<li class="nav-item">
-					<a href="#features" class="nav-link active" aria-current="page" href="#">Features</a>
+					<a href="#features" class="nav-link active" aria-current="page">Features</a>
 				</li>
 			</ul>
 
@@ -93,7 +93,7 @@
 			<h1 class="display-4 fw-normal blue-to-cyan-text">Price. Buy.</h1>
 			<p class="fs-5 text-muted">(All purchases are one-time.)</p>
 		</div>
-		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center justify-content-center">
 			<div class="col">
 				<div class="card mb-4 rounded-3 shadow-sm dark-mode-pricing-card">
 					<div class="card-header py-3">
@@ -128,6 +128,8 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center justify-content-center">
 			<div class="col">
 				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
 					<div class="card-header py-3 text-white bg-primary border-primary">
@@ -145,7 +147,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col horizontally-centered">
+			<div class="col">
 				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card">
 					<div class="card-header py-3 text-white bg-primary border-primary">
 						<h4 class="my-0 fw-normal">Custom</h4>
@@ -153,7 +155,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">Let's negotiate.</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Amount of documents is whatever you like.</p></li>
+							<li><p class="mt-4">Amount of documents is your choice.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
@@ -165,6 +167,13 @@
 		</div>
 	</main>
 </div>
+
+
+
+
+
+
+
 
 <div class="mt-auto py-2 frosted-glass full-width footer">
 	<div class="container">
