--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	</div>
 </div>
 
-<div class="container py-3">
+<div class="container horizontally-centered full-width" style="">
 	<main id="pricing">
 		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
 			<h1 class="display-4 fw-normal blue-to-cyan-text">Price. Buy.</h1>
@@ -102,7 +102,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$1000<small class="text-muted fw-light">/business</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 900,000 documents.</p></li>
+							<li><p class="mt-4">Up to 900k documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
@@ -119,7 +119,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$3000<small class="text-muted fw-light">/business</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 20,000,000 documents.</p></li>
+							<li><p class="mt-4">Up to 20m documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
@@ -138,7 +138,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$10,000<small class="text-muted fw-light">/business</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Up to 40,000,000 documents.</p></li>
+							<li><p class="mt-4">Up to 40m documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
@@ -155,7 +155,7 @@
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">Let's negotiate.</small></h1>
 						<ul class="list-unstyled mt-3 mb-4">
-							<li><p class="mt-4">Amount of documents is your choice.</p></li>
+							<li><p class="mt-4">Amount of docs you want.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
 							<li><p class="mb-4">Unlimited VPN clients.</p></li>
@@ -167,13 +167,6 @@
 		</div>
 	</main>
 </div>
-
-
-
-
-
-
-
 
 <div class="mt-auto py-2 frosted-glass full-width footer">
 	<div class="container">
