--- a/index.html
+++ b/index.html
@@ -47,7 +47,35 @@
 	</div>
 	<div class="overflow-hidden">
 		<div class="container px-5">
-			<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" height="500" loading="lazy">
+
+
+			<div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
+
+				<button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example" height="400" loading="lazy">
+					</div>
+					<div class="carousel-item">
+						<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example" height="400" loading="lazy">
+					</div>
+					<div class="carousel-item">
+						<img src="./assets/images/Screenshot 2024-02-10 112210.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example" height="400" loading="lazy">
+					</div>
+				</div>
+				<button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
 		</div>
 	</div>
 </div>
@@ -88,7 +116,7 @@
 	</div>
 </div>
 
-<div class="container horizontally-centered full-width" style="">
+<div class="container horizontally-centered full-width">
 	<main id="pricing">
 		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
 			<h1 class="display-4 fw-normal blue-to-cyan-text">Price. Buy.</h1>
