--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <br />
 
 <div class="px-4 pt-5 my-5 text-center">
-	<h1 class="display-4 fw-bold blue-to-cyan-text">AmoorEDMS</h1>
+	<h1 class="display-4 fw-bold sky-to-blue-text">AmoorEDMS</h1>
 	<br />
 	<div class="col-lg-6 mx-auto">
 		<p class="lead mb-4">Advanced document management for businesses of all sizes.<br /><span class="blue-to-cyan-text">Manage less. Store more.</span><br /></p>
@@ -100,7 +100,7 @@
 				<img src="./assets/icons/separation-of-concerns.svg" alt="" height="32">
 			</div>
 			<div>
-				<h2 class="blue-to-cyan-text">Separation of Concerns</h2>
+				<h2 class="sky-to-blue-text">Separation of Concerns</h2>
 				<p>AmoorEDMS provides great separation of concerns, users (aka employees) are separated into groups, and their permissions are inherited from their groups, so employees from one group do not have access to the work of another.</p>
 			</div>
 		</div>
@@ -109,7 +109,7 @@
 				<span class="bi bootstrap-icon features-icon"> &#xF46C;</span>
 			</div>
 			<div>
-				<h2 class="sky-to-blue-text">Lightning Fast Search</h2>
+				<h2 class="blue-to-cyan-text">Lightning Fast Search</h2>
 				<p>AmoorEDMS offers lightning fast search functionality that is designed to be as user-friendly as possible, and also has a way to view documents in a tabular manner without the images for fast access.</p>
 			</div>
 		</div>
